--- a/css/main.css
+++ b/css/main.css
@@ -306,7 +306,7 @@
 
 .projects-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
   height: 100%;
   gap: 1.5rem;
 }
@@ -410,9 +410,11 @@
 .announcement-container {
   flex: 1;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   background-color: #ffffff;
   border-radius: 0.5rem;
-  padding: 2.5rem 2rem;
+  padding: 2rem;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .announcement-container:hover {
@@ -424,6 +426,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  flex-basis: min(22rem, 95%);
 }
 
 .announcement-item__title {
@@ -467,6 +470,8 @@
   border-radius: 0.5rem;
   flex: 1;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding: 2rem;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -476,7 +481,7 @@
 }
 
 .trending-list {
-  flex: 1;
+  flex-basis: min(25rem, 95%);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
